git-tfs-id: [http://alm.cecred.coop.br:8080/tfs/DefaultCollection]$/FONTES/2017_04;C10180

--- a/ireport/Relatorios/iReport/jrxml/crrl227_microcredito.jrxml
+++ b/ireport/Relatorios/iReport/jrxml/crrl227_microcredito.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="modrel234" language="groovy" pageWidth="842" pageHeight="700" orientation="Landscape" columnWidth="842" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" whenResourceMissingType="Empty" uuid="b0b8a82c-538e-4c5e-a2d2-48ac4a892d8a">
 	<property name="ireport.zoom" value="2.0"/>
-	<property name="ireport.x" value="390"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="PR_NMRESCOP" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -78,18 +78,8 @@
 	</variable>
 	<group name="idgrumic">
 		<groupExpression><![CDATA[$F{idgrumic}]]></groupExpression>
-		<groupHeader>
-			<band/>
-		</groupHeader>
 		<groupFooter>
-			<band height="12">
-				<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-					<reportElement uuid="49977389-b786-4c49-a030-068a84648ad5" x="135" y="0" width="67" height="8"/>
-					<textElement textAlignment="Right">
-						<font fontName="Courier New" size="6"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$V{subtot_vlrepfis}]]></textFieldExpression>
-				</textField>
+			<band height="14">
 				<staticText>
 					<reportElement uuid="58774c5d-0e44-410d-96f3-63d0e92b7c21" x="57" y="0" width="78" height="8"/>
 					<textElement textAlignment="Right">
@@ -97,14 +87,21 @@
 					</textElement>
 					<text><![CDATA[TOTAIS]]></text>
 				</staticText>
-				<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="false">
+				<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
+					<reportElement uuid="49977389-b786-4c49-a030-068a84648ad5" x="135" y="0" width="67" height="8"/>
+					<textElement textAlignment="Right">
+						<font fontName="Courier New" size="6"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$V{subtot_vlrepfis}]]></textFieldExpression>
+				</textField>
+				<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
 					<reportElement uuid="2d008017-696e-487d-870d-bc80a35d6d66" x="202" y="0" width="67" height="8"/>
 					<textElement textAlignment="Right">
 						<font fontName="Courier New" size="6"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$V{subtot_vlrepjur}]]></textFieldExpression>
 				</textField>
-				<textField pattern="#,##0.00;-#,##0.00">
+				<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
 					<reportElement uuid="79ee9265-1a3d-4fce-b3e6-77fdf5c9f20e" x="269" y="0" width="67" height="8"/>
 					<textElement textAlignment="Right">
 						<font fontName="Courier New" size="6"/>
@@ -136,7 +133,7 @@
 		</groupFooter>
 	</group>
 	<columnHeader>
-		<band height="47">
+		<band height="48">
 			<staticText>
 				<reportElement uuid="73b77e3d-7d50-4426-99de-171902beeaa0" x="0" y="39" width="135" height="8"/>
 				<textElement>
@@ -252,7 +249,7 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="10">
+		<band height="8" splitType="Prevent">
 			<textField>
 				<reportElement uuid="a863e1f8-6562-4e27-bbed-eeb2bc5b99cc" x="0" y="0" width="135" height="8"/>
 				<textElement>
@@ -260,14 +257,14 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{dsorgrec}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
+			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="false">
 				<reportElement uuid="dba9502e-d472-4da1-a309-ee8cd81e3485" x="135" y="0" width="67" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{vlrepfis}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
+			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="false">
 				<reportElement uuid="b9aa95d7-db82-4633-a0d9-6cbdcb90eb02" x="202" y="0" width="67" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
@@ -275,28 +272,28 @@
 				<textFieldExpression><![CDATA[$F{vlrepjur}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="652ae7a5-d179-4f29-9e92-2c6b61a6da75" x="269" y="0" width="67" height="8"/>
+				<reportElement uuid="652ae7a5-d179-4f29-9e92-2c6b61a6da75" x="269" y="0" width="67" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{vlreprec}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="401b9c76-25d6-4a56-b805-7c5948687e2e" x="369" y="0" width="67" height="8"/>
+				<reportElement uuid="401b9c76-25d6-4a56-b805-7c5948687e2e" x="369" y="0" width="67" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{vlate59d}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="3c23139d-4539-4e36-8633-30d000e284a0" x="436" y="0" width="67" height="8"/>
+				<reportElement uuid="3c23139d-4539-4e36-8633-30d000e284a0" x="436" y="0" width="67" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{vlaci59d}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="c5dcc729-59e0-4c18-b03e-11eaa8323712" x="503" y="0" width="67" height="8"/>
+				<reportElement uuid="c5dcc729-59e0-4c18-b03e-11eaa8323712" x="503" y="0" width="67" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
@@ -305,51 +302,51 @@
 		</band>
 	</detail>
 	<summary>
-		<band height="11">
+		<band height="17">
 			<staticText>
-				<reportElement uuid="58774c5d-0e44-410d-96f3-63d0e92b7c21" x="57" y="0" width="78" height="8"/>
+				<reportElement uuid="58774c5d-0e44-410d-96f3-63d0e92b7c21" x="57" y="5" width="78" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<text><![CDATA[TOTAIS GERAIS]]></text>
 			</staticText>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="867695d8-82b1-42ee-9237-5194c9d6da93" x="135" y="0" width="67" height="8"/>
+				<reportElement uuid="867695d8-82b1-42ee-9237-5194c9d6da93" x="135" y="5" width="67" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{tot_vlrepfis}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="e7735004-e788-494c-9efb-6cc9fb812de1" x="202" y="0" width="67" height="8"/>
+				<reportElement uuid="e7735004-e788-494c-9efb-6cc9fb812de1" x="202" y="5" width="67" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{tot_vlrepjur}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="a3c48c65-9f21-4842-8175-58aa1c3d194e" x="269" y="0" width="67" height="8"/>
+				<reportElement uuid="a3c48c65-9f21-4842-8175-58aa1c3d194e" x="269" y="5" width="67" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{tot_vlreprec}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="9f95dd3b-9fd4-44d2-8c17-615d1d4c2c9f" x="369" y="0" width="67" height="8"/>
+				<reportElement uuid="9f95dd3b-9fd4-44d2-8c17-615d1d4c2c9f" x="369" y="5" width="67" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{tot_vlate59d}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="96202655-dee3-43c0-9a9a-b0af13d1b766" x="436" y="0" width="67" height="8"/>
+				<reportElement uuid="96202655-dee3-43c0-9a9a-b0af13d1b766" x="436" y="5" width="67" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{tot_vlaci59d}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="04e8e26a-53e3-4fc5-b004-50ed9f74ea98" x="503" y="0" width="67" height="8"/>
+				<reportElement uuid="04e8e26a-53e3-4fc5-b004-50ed9f74ea98" x="503" y="5" width="67" height="8" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="6"/>
 				</textElement>
