--- a/ireport/Relatorios/iReport/jrxml/crrl686.jrxml
+++ b/ireport/Relatorios/iReport/jrxml/crrl686.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="crrl686" language="groovy" pageWidth="595" pageHeight="670" whenNoDataType="AllSectionsNoDetail" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" whenResourceMissingType="Empty" uuid="b0b8a82c-538e-4c5e-a2d2-48ac4a892d8a">
-	<property name="ireport.zoom" value="4.287177620000003"/>
-	<property name="ireport.x" value="1326"/>
+	<property name="ireport.zoom" value="2.0"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="PR_NMRESCOP" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -42,6 +42,9 @@
 	<field name="dtocorre" class="java.lang.String">
 		<fieldDescription><![CDATA[dtocorre]]></fieldDescription>
 	</field>
+	<field name="tot_vlsldpen" class="java.lang.Double">
+		<fieldDescription><![CDATA[tot_vlsldpen]]></fieldDescription>
+	</field>
 	<variable name="sub_total" class="java.lang.Double" resetType="Group" resetGroup="Float" calculation="Sum">
 		<variableExpression><![CDATA[$F{vltotpag}]]></variableExpression>
 		<initialValueExpression><![CDATA[]]></initialValueExpression>
@@ -75,16 +78,16 @@
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="24">
+			<band height="14">
 				<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-					<reportElement uuid="c5e1d960-9d87-40f0-af1c-2f61f23d5b06" x="265" y="8" width="65" height="8"/>
+					<reportElement uuid="c5e1d960-9d87-40f0-af1c-2f61f23d5b06" x="265" y="4" width="65" height="8"/>
 					<textElement textAlignment="Right">
 						<font fontName="Courier New" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$V{total_geral}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="16" y="8" width="124" height="8"/>
+					<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="16" y="4" width="124" height="8"/>
 					<textElement>
 						<font fontName="Courier New" size="7" isUnderline="false"/>
 					</textElement>
@@ -184,7 +187,7 @@
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="16">
+			<band height="14">
 				<staticText>
 					<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="16" y="0" width="124" height="8"/>
 					<textElement>
@@ -240,14 +243,14 @@
 	</columnHeader>
 	<detail>
 		<band height="8" splitType="Prevent">
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="c5e1d960-9d87-40f0-af1c-2f61f23d5b06" x="16" y="0" width="45" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nrcnvcob}]]></textFieldExpression>
 			</textField>
-			<textField pattern="" isBlankWhenNull="false">
+			<textField pattern="" isBlankWhenNull="true">
 				<reportElement uuid="c5e1d960-9d87-40f0-af1c-2f61f23d5b06" x="175" y="0" width="45" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
@@ -284,4 +287,24 @@
 			</textField>
 		</band>
 	</detail>
+	<summary>
+		<band height="14" splitType="Stretch">
+			<staticText>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="16" y="2" width="124" height="8"/>
+				<textElement>
+					<font fontName="Courier New" size="7" isUnderline="false"/>
+				</textElement>
+				<text><![CDATA[TOTAL SALDO PENDENTE ==>]]></text>
+			</staticText>
+			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
+				<reportElement uuid="c5e1d960-9d87-40f0-af1c-2f61f23d5b06" x="265" y="2" width="65" height="8">
+					<printWhenExpression><![CDATA[$F{tot_vlsldpen} != null ? true : false]]></printWhenExpression>
+				</reportElement>
+				<textElement textAlignment="Right">
+					<font fontName="Courier New" size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{tot_vlsldpen}]]></textFieldExpression>
+			</textField>
+		</band>
+	</summary>
 </jasperReport>
