--- a/ireport/Relatorios/iReport/jrxml/crrl291_saldos.jrxml
+++ b/ireport/Relatorios/iReport/jrxml/crrl291_saldos.jrxml
@@ -21,45 +21,45 @@
 	<field name="nrdconta" class="java.lang.String">
 		<fieldDescription><![CDATA[@nrdconta]]></fieldDescription>
 	</field>
-	<field name="vlblq001" class="java.lang.Float">
+	<field name="vlblq001" class="java.lang.Double">
 		<fieldDescription><![CDATA[@vlblq001]]></fieldDescription>
 	</field>
-	<field name="vlblq002" class="java.lang.Float">
+	<field name="vlblq002" class="java.lang.Double">
 		<fieldDescription><![CDATA[@vlblq002]]></fieldDescription>
 	</field>
-	<field name="vlblq003" class="java.lang.Float">
+	<field name="vlblq003" class="java.lang.Double">
 		<fieldDescription><![CDATA[@vlblq003]]></fieldDescription>
 	</field>
 	<field name="vlblq004" class="java.lang.Float">
 		<fieldDescription><![CDATA[@vlblq004]]></fieldDescription>
 	</field>
-	<field name="vlblq999" class="java.lang.Float">
+	<field name="vlblq999" class="java.lang.Double">
 		<fieldDescription><![CDATA[@vlblq999]]></fieldDescription>
 	</field>
-	<field name="vldispon" class="java.lang.Float">
+	<field name="vldispon" class="java.lang.Double">
 		<fieldDescription><![CDATA[@vldispon]]></fieldDescription>
 	</field>
-	<variable name="vr_vldispon" class="java.lang.Float" calculation="Sum">
+	<variable name="vr_vldispon" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{vldispon}]]></variableExpression>
 		<initialValueExpression><![CDATA[new Float(0)]]></initialValueExpression>
 	</variable>
-	<variable name="vr_vlblq001" class="java.lang.Float" calculation="Sum">
+	<variable name="vr_vlblq001" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{vlblq001}]]></variableExpression>
 		<initialValueExpression><![CDATA[new Float(0)]]></initialValueExpression>
 	</variable>
-	<variable name="vr_vlblq002" class="java.lang.Float" calculation="Sum">
+	<variable name="vr_vlblq002" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{vlblq002}]]></variableExpression>
 		<initialValueExpression><![CDATA[new Float(0)]]></initialValueExpression>
 	</variable>
-	<variable name="vr_vlblq003" class="java.lang.Float" calculation="Sum">
+	<variable name="vr_vlblq003" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{vlblq003}]]></variableExpression>
 		<initialValueExpression><![CDATA[new Float(0)]]></initialValueExpression>
 	</variable>
-	<variable name="vr_vlblq004" class="java.lang.Float" calculation="Sum">
+	<variable name="vr_vlblq004" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{vlblq004}]]></variableExpression>
 		<initialValueExpression><![CDATA[new Float(0)]]></initialValueExpression>
 	</variable>
-	<variable name="vr_vlblq999" class="java.lang.Float" calculation="Sum">
+	<variable name="vr_vlblq999" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{vlblq999}]]></variableExpression>
 		<initialValueExpression><![CDATA[new Float(0)]]></initialValueExpression>
 	</variable>
