--- a/ireport/Relatorios/iReport/jrxml/crrl354.jrxml
+++ b/ireport/Relatorios/iReport/jrxml/crrl354.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="modrel234" language="groovy" pageWidth="842" pageHeight="700" orientation="Landscape" columnWidth="842" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" whenResourceMissingType="Empty" uuid="b0b8a82c-538e-4c5e-a2d2-48ac4a892d8a">
 	<property name="ireport.zoom" value="4.0"/>
-	<property name="ireport.x" value="2110"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="1017"/>
 	<parameter name="PR_NMRESCOP" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -251,7 +251,7 @@
 						<textElement textAlignment="Right">
 							<font fontName="Courier New" size="6"/>
 						</textElement>
-						<text><![CDATA[RIS CRTO]]></text>
+						<text><![CDATA[RIS ATU]]></text>
 					</staticText>
 					<staticText>
 						<reportElement uuid="493de2ed-9389-4278-8915-dbc9a6954059" x="684" y="16" width="30" height="8"/>
