--- a/ireport/Relatorios/iReport/jrxml/crrl344_lanc_a.jrxml
+++ b/ireport/Relatorios/iReport/jrxml/crrl344_lanc_a.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="crrl344_lanc_a" language="groovy" pageWidth="595" pageHeight="672" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" whenResourceMissingType="Empty" uuid="b0b8a82c-538e-4c5e-a2d2-48ac4a892d8a">
-	<property name="ireport.zoom" value="2.0"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="crrl344_lanc_a" language="groovy" pageWidth="842" pageHeight="672" orientation="Landscape" columnWidth="842" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" whenResourceMissingType="Empty" uuid="b0b8a82c-538e-4c5e-a2d2-48ac4a892d8a">
+	<property name="ireport.zoom" value="2.9282000000000012"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="PR_NMRESCOP" class="java.lang.String">
@@ -34,18 +34,68 @@
 	<columnHeader>
 		<band height="16">
 			<staticText>
-				<reportElement uuid="c81d95aa-b61e-452f-86eb-227a58768da7" x="0" y="0" width="468" height="8"/>
-				<textElement>
-					<font fontName="Courier New" size="7"/>
+				<reportElement uuid="e59b8ca0-dbd2-409a-a593-a65e237baf17" mode="Transparent" x="0" y="0" width="45" height="8" forecolor="#000000" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Right" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Courier New" size="6" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
 				</textElement>
-				<text><![CDATA[  CONTA/DV  TITULAR                                             COD. REFERENCIA  OPERACAO]]></text>
+				<text><![CDATA[CONTA/DV]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="c81d95aa-b61e-452f-86eb-227a58768da7" x="0" y="8" width="468" height="8"/>
-				<textElement>
-					<font fontName="Courier New" size="7"/>
+				<reportElement uuid="d2e58efe-33a0-4c8a-9ee6-652ac6a34343" mode="Transparent" x="54" y="0" width="184" height="8" forecolor="#000000" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Courier New" size="6" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
 				</textElement>
-				<text><![CDATA[----------  ----------------------------------------  -------------------------  ------------]]></text>
+				<text><![CDATA[TITULAR]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="9e0b8fd7-eda4-4279-988a-7e9db7208f98" mode="Transparent" x="244" y="0" width="112" height="8" forecolor="#000000" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Right" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Courier New" size="6" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[COD. REFERENCIA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="7c0bb70a-b900-4c1e-8b8b-018f0c0cebfd" mode="Transparent" x="365" y="0" width="148" height="8" forecolor="#000000" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Courier New" size="6" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[OPERACAO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="f954a4ce-e69d-4872-9555-f4c02faf5283" mode="Transparent" x="0" y="8" width="45" height="8" forecolor="#000000" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Right" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Courier New" size="6" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[--------------]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="d918399c-648d-4fc3-ab80-0b853391a403" mode="Transparent" x="54" y="8" width="184" height="8" forecolor="#000000" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Courier New" size="6" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[-------------------------------------------------]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="18488272-1901-4e47-bb5d-11edda027e90" mode="Transparent" x="244" y="8" width="112" height="8" forecolor="#000000" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Right" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Courier New" size="6" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[-------------------------------]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="9b01189e-df83-483f-8cd9-562e7d914185" mode="Transparent" x="365" y="8" width="148" height="8" forecolor="#000000" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Courier New" size="6" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[---------------------------------------]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -54,28 +104,28 @@
 			<textField>
 				<reportElement uuid="910fa1d1-801e-4781-b3c7-230017b19827" x="0" y="0" width="45" height="8"/>
 				<textElement textAlignment="Right">
-					<font fontName="Courier New" size="7"/>
+					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nrdconta}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="79c7315c-7145-4a83-aa6f-fe091596a6b5" x="54" y="0" width="184" height="8"/>
 				<textElement>
-					<font fontName="Courier New" size="7"/>
+					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nmprimtl}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="bad82db8-86c1-438c-9087-f0d2a7eecaa8" x="244" y="0" width="112" height="8"/>
 				<textElement textAlignment="Right">
-					<font fontName="Courier New" size="7"/>
+					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{contrato}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="851e43e7-ae7e-4ae8-bcf4-fd58488339cb" x="365" y="0" width="148" height="8"/>
 				<textElement>
-					<font fontName="Courier New" size="7"/>
+					<font fontName="Courier New" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{operacao}]]></textFieldExpression>
 			</textField>
